--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:24:00 AM</p>
+    <p class="lastupdate">09/18/2020 03:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.9&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.9&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.9&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">61%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.909 inHg (-0.027)</td>
+        <td class="data">29.912 inHg (-0.025)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="03:21:56 AM">
-            66.8</span>
+          <span title="03:27:34 AM">
+            66.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:21:56 AM" class="loval">
-            66.8</span>
+          <span title="03:27:34 AM" class="loval">
+            66.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:14:02 AM">
-            61</span><br/>
+          <span title="03:28:34 AM">
+            62</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          342
+          343
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 12 hours, 37 minutes</td>
+      <td class="data">16 days, 12 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 12 hours, 37 minutes</td>
+      <td class="data">16 days, 12 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
