--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:34:00 AM</p>
+    <p class="lastupdate">09/18/2020 03:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.6&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.6&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.6&#176;F</td>
+        <td class="data">66.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.2&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.917 inHg (-0.017)</td>
+        <td class="data">29.919 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">75.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="03:32:00 AM">
-            66.6</span>
+          <span title="03:35:36 AM">
+            66.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:32:00 AM" class="loval">
-            66.6</span>
+          <span title="03:35:36 AM" class="loval">
+            66.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 12 hours, 47 minutes</td>
+      <td class="data">16 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 12 hours, 47 minutes</td>
+      <td class="data">16 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
