--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:54:00 AM</p>
+    <p class="lastupdate">09/18/2020 03:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.1&#176;F</td>
+        <td class="data">66.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.0&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.907 inHg (-0.021)</td>
+        <td class="data">29.910 inHg (-0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">45%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="03:52:30 AM">
-            66.1</span>
+          <span title="03:56:06 AM">
+            66.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:52:30 AM" class="loval">
-            66.1</span>
+          <span title="03:56:06 AM" class="loval">
+            66.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          346
+          345
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="12:11:00 AM">
-            45</span><br/>
+          <span title="03:59:00 AM">
+            46</span><br/>
           <span title="01:16:00 AM">
             43</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:11:00 AM (Friday)">
-            45</span><br/>
+          <span title="03:59:00 AM (Friday)">
+            46</span><br/>
           <span title="05:44:02 PM (Wednesday)">
             26</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 13 hours, 7 minutes</td>
+      <td class="data">16 days, 13 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 13 hours, 7 minutes</td>
+      <td class="data">16 days, 13 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
