--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 03:59:00 AM</p>
+    <p class="lastupdate">09/18/2020 04:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">65%</td>
+        <td class="data">66%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.015)</td>
+        <td class="data">29.911 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNW (338&#176;)</td>
+        <td class="data">5 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">45%</td>
+        <td class="data">47%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="03:56:06 AM">
-            66.0</span>
+          <span title="04:02:14 AM">
+            65.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:56:06 AM" class="loval">
-            66.0</span>
+          <span title="04:02:14 AM" class="loval">
+            65.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="03:51:36 AM">
-            54.1</span><br/>
+          <span title="03:59:28 AM">
+            54.3</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:51:36 AM">
-            65</span><br/>
+          <span title="03:59:28 AM">
+            66</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          345
+          343
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:59:00 AM">
-            46</span><br/>
+          <span title="04:03:00 AM">
+            47</span><br/>
           <span title="01:16:00 AM">
             43</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:59:00 AM (Friday)">
-            46</span><br/>
+          <span title="04:03:00 AM (Friday)">
+            47</span><br/>
           <span title="05:44:02 PM (Wednesday)">
             26</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 13 hours, 12 minutes</td>
+      <td class="data">16 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 13 hours, 12 minutes</td>
+      <td class="data">16 days, 13 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
