--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 04:04:00 AM</p>
+    <p class="lastupdate">09/18/2020 04:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.9&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.9&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.9&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.911 inHg (-0.013)</td>
+        <td class="data">29.911 inHg (-0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph WNW (292&#176;)</td>
+        <td class="data">5 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="04:02:14 AM">
-            65.8</span>
+          <span title="04:08:14 AM">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:14 AM" class="loval">
-            65.8</span>
+          <span title="04:08:14 AM" class="loval">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             75.9</span><br/>
-          <span title="12:40:00 AM">
-            74.8</span>
+          <span title="04:09:00 AM">
+            74.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -505,14 +505,14 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:03:00 AM">
-            47</span><br/>
+          <span title="04:09:00 AM">
+            48</span><br/>
           <span title="01:16:00 AM">
             43</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:03:00 AM (Friday)">
-            47</span><br/>
+          <span title="04:09:00 AM (Friday)">
+            48</span><br/>
           <span title="05:44:02 PM (Wednesday)">
             26</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 13 hours, 17 minutes</td>
+      <td class="data">16 days, 13 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 13 hours, 17 minutes</td>
+      <td class="data">16 days, 13 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
