--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 04:34:00 AM</p>
+    <p class="lastupdate">09/18/2020 04:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.910 inHg (-0.003)</td>
+        <td class="data">29.913 inHg (-0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">4 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          343
+          344
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 13 hours, 47 minutes</td>
+      <td class="data">16 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 13 hours, 47 minutes</td>
+      <td class="data">16 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
