--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 05:39:00 AM</p>
+    <p class="lastupdate">09/18/2020 05:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.0&#176;F</td>
+        <td class="data">65.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.3&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">67%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (0.005)</td>
+        <td class="data">29.927 inHg (0.007)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.4&#176;F</td>
+        <td class="data">74.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">47%</td>
+        <td class="data">46%</td>
       </tr>
     </tbody>
   </table>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="03:59:28 AM">
-            54.3</span><br/>
+          <span title="05:41:48 AM">
+            54.6</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:59:28 AM">
-            66</span><br/>
+          <span title="05:41:48 AM">
+            67</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 14 hours, 52 minutes</td>
+      <td class="data">16 days, 14 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 14 hours, 52 minutes</td>
+      <td class="data">16 days, 14 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
