--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 05:59:00 AM</p>
+    <p class="lastupdate">09/18/2020 06:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.5&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.5&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.5&#176;F</td>
+        <td class="data">65.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">67%</td>
+        <td class="data">68%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.929 inHg (0.014)</td>
+        <td class="data">29.932 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:41:10 AM">
             70.3</span><br/>
-          <span title="05:56:22 AM">
-            65.5</span>
+          <span title="06:02:00 AM">
+            65.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:56:22 AM" class="loval">
-            65.5</span>
+          <span title="06:02:00 AM" class="loval">
+            65.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="05:41:48 AM">
-            54.6</span><br/>
+          <span title="06:00:36 AM">
+            54.7</span><br/>
           <span title="01:25:34 AM">
             50.9</span>
         </td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:41:48 AM">
-            67</span><br/>
+          <span title="06:00:36 AM">
+            68</span><br/>
           <span title="01:25:34 AM">
             51</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 15 hours, 12 minutes</td>
+      <td class="data">16 days, 15 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 15 hours, 12 minutes</td>
+      <td class="data">16 days, 15 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
